adds vast trino/spark + nessie