@@ -14,3 +14,17 @@
 -Djdk.nio.maxCachedBufferSize=2000000
 -XX:+UnlockDiagnosticVMOptions
 -XX:+UseAESCTRIntrinsics
+## VAST OPTIMIZATIONS
+# Reduce starvation of threads by GClocker, recommend to set about the number of cpu cores (JDK-8192647)
+-XX:+UnlockDiagnosticVMOptions
+-XX:GCLockerRetryAllocationCount=32
+# Allow loading dynamic agent used by JOL
+-XX:+EnableDynamicAgentLoading
+## Only works on some JVM versions, notably whatever is in officail Trino 443 image and prior
+## Disable Preventive GC for performance reasons (JDK-8293861)
+# -XX:-G1UsePreventiveGC
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+# don't verify cert names
+-Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
